# PhenoLab

./: .gitignore  README.md  cambridge_comorb_score.py  jb_geomap.py  pyproject.toml  requirements.txt  setup_snomed_uk.py
.github/.workflows/: prod-deploy.yml
.streamlit/: secrets.toml
_scratch/: load_bnf_to_snomed.py  load_hdruk.py  load_nel_segments.py  load_nhs_gp_snomed.py  test_dynamo.py
_scratch/hidden_pages/: 05_Manage_Vocabularies.py
data/camb_comorb_score/: BJGP.2022.0235_suppl_Appendix_1.xlsx  camb_comorb_dm+d.csv  camb_comorb_emismed.csv  camb_comorb_snomed.csv  excel_to_parquet.py
extdefinitions/: README.md  requirements.txt  update.sh
extdefinitions/hdruk/: fetch_hdruk.py  hdruk_config.yml  hdruk_definitions.parquet  hdruk_utils.py
extdefinitions/ontoserver/: .env.example  fetch_nhs_snomed.py  nhs_snomed_refset_definitions.parquet  nhs_snomed_refset_metadata.parquet  onto_utils.py  ontoserver_config.yml
extdefinitions/opencodelists/: fetch_opencodelists.py  opencodelists_config.yml  opencodelists_definitions.parquet  opencodelists_utils.py
ontoserver/: onto.py
phenolab/: .env.example  DEPENDENCIES.md  DEPLOYMENT.md  PhenoLab.py  README.md  connections.toml.example  create_tables.py  debug.py  deploy.sh  environment.yml  external_definitions.yml  jb_geomap.py  loaders.py  measurement_cutoffs.md  requirements.txt  setup.py  snowflake.template.yml  snowflake.yml  todo.txt
phenolab/.streamlit/: config.toml
phenolab/_base_features/: README.md  base_apc_concepts.py  base_bnf_statement.py  base_person_nel_index.py  base_unified_emergency_care.py  base_unified_sus_encounters.py  v_medication_with_bnf.py
phenolab/_external_definitions/: README.md  fetch_bnf.py  fetch_hdruk.py  fetch_open_codelists.py
phenolab/configs/: account_mapping.yml  ncl_icb_dev.yml  nel_icb.yml  nel_icb_dev.yml  nel_icb_prod.yml  sel_icb_dev.yml  sel_icb_prod.yml
phenolab/definition_library/: README.md  create_definitionstore_view.py
phenolab/deploy/: deploy.sh
phenolab/features_base/: base_apc_concepts.py
phenolab/hidden_pages/: Build_Complex_Phenotypes.py
phenolab/pages/: 01_Browse_Definitions.py  01_Manage_Vocabularies.py  02_Browse_Database_Definitions.py  02_Browse_Definitions.py  02_Manage_Definitions.py  03.py  03_Manage_Definitions.py  03_Standardise_Measurements.py  04_Build_Base_Features.py  04_Standardise_Measurements.py  05_Browse_the_Feature_Store.py  05_Build_Base_Features.py  05_Build_Complex_Phenotypes.py  05_Manage_Vocabularies.py  06_Browse_the_Feature_Store.py  06_Build_Complex_Phenotypes.py  07_Browse_the_Feature_Store.py  07_Manage_Vocabularies.py
phenolab/utils/: condition_interaction_utils.py  config_utils.py  database_utils.py  definition.py  definition_interaction_utils.py  measurement.py  measurement_interaction_utils.py  phenotype.py  style_utils.py
pipeline/definition_library/: update.py
pipeline/feature_store_example/: readme.md  (+3 more)
pipeline_dev/: README.md
pipeline_prod/: README.md
projects/: .env.example
scripts/: helper.py
(+815 files in other folders)
